style.css
body {
    font-family: Arial, sans-serif;
    background-color: #edffe6;
    color: #333;
    margin: 0;
}

header {
    background-color: rgb(226, 226, 116);
    color: rgb(141, 19, 19);
    text-align: center;
    padding: 20px;
}

header p {
    font-size: 1.5em;
    white-space: nowrap;
}

main {
    width: 100%;
    margin: auto;
}

section {
    background-color: white;
    margin: 20px 0;
    padding: 15px;
}

img {
    width: 100%;
    height: auto;
    margin-top: 10px;
}

/* ΔΙΟΡΘΩΣΗ ΕΔΩ */
h2 {
    color: brown;
}

footer {
    background-color: rgb(10, 143, 8);
    color: white;
    text-align: center;
    padding: 10px;
}

ol {
    list-style-type: decimal;
    padding-left: 30px;
}

li {
    display: list-item;
}

/* ΓΙΑ 2 ΦΩΤΟ ΔΙΠΛΑ-ΔΙΠΛΑ */
.image-container {
    display: flex;
    gap: 10px;
}

.image-container img {
    width: 60%;
    height: auto;
    object-fit: cover;
}



footer   {background-color: rgb(226, 226, 116);
    color: rgb(141, 19, 19);
    text-align: center;
    padding: 10px;}  

